--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         </div>
                              <span style="color: green;" id="win"></span><span style="color: red;" id="loss"></span>
                       </div>
-                       <h4>BET RESPONSIBLY</h4>
+                       <h4>BET RESPONSIBLY(powered by PHEMZA)</h4>
                     </div>      
                     </div>
 
